// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerNotification attribute description with text should render React element 1`] = `
<div>
  <section
    class="googlesitekit-publisher-win googlesitekit-publisher-win--is-open"
    id="fake"
  >
    <div
      class="mdc-layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="googlesitekit-publisher-win__content mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--order-1-tablet mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--order-2-phone"
        >
          <h3
            class="googlesitekit-heading-2 googlesitekit-publisher-win__title"
          >
            Hey there!
          </h3>
          <div
            class="googlesitekit-publisher-win__desc"
          >
            <p
              class="sk-react-element"
            >
              I am React elemet
            </p>
          </div>
          <div
            class="googlesitekit-publisher-win__actions"
          >
            <span
              class="spinner"
              style="display: none; float: none; margin-top: 0px; visibility: visible;"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`BannerNotification attribute description with text should render span with dangerouslySetInnerHTML 1`] = `
<div>
  <section
    class="googlesitekit-publisher-win googlesitekit-publisher-win--is-open"
    id="fake"
  >
    <div
      class="mdc-layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="googlesitekit-publisher-win__content mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--order-1-tablet mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--order-2-phone"
        >
          <h3
            class="googlesitekit-heading-2 googlesitekit-publisher-win__title"
          >
            Hey there!
          </h3>
          <div
            class="googlesitekit-publisher-win__desc"
          >
            <p>
              <span
                class="googlesitekit-publisher-win__inner-html"
              >
                I am string, not React elemet
              </span>
            </p>
          </div>
          <div
            class="googlesitekit-publisher-win__actions"
          >
            <span
              class="spinner"
              style="display: none; float: none; margin-top: 0px; visibility: visible;"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`BannerNotification should render React element 1`] = `
<div>
  <section
    class="googlesitekit-publisher-win googlesitekit-publisher-win--is-open"
    id="fake"
  >
    <div
      class="mdc-layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="googlesitekit-publisher-win__content mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--order-1-tablet mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--order-2-phone"
        >
          <h3
            class="googlesitekit-heading-2 googlesitekit-publisher-win__title"
          >
            Hey there!
          </h3>
          <div
            class="googlesitekit-publisher-win__desc"
          >
            <p
              class="sk-react-element"
            >
              I am React elemet
            </p>
          </div>
          <div
            class="googlesitekit-publisher-win__actions"
          >
            <span
              class="spinner"
              style="display: none; float: none; margin-top: 0px; visibility: visible;"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`BannerNotification should render span with dangerouslySetInnerHTML 1`] = `
<div>
  <section
    class="googlesitekit-publisher-win googlesitekit-publisher-win--is-open"
    id="fake"
  >
    <div
      class="mdc-layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="googlesitekit-publisher-win__content mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--order-1-tablet mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--order-2-phone"
        >
          <h3
            class="googlesitekit-heading-2 googlesitekit-publisher-win__title"
          >
            Hey there!
          </h3>
          <div
            class="googlesitekit-publisher-win__desc"
          >
            <p>
              <span
                class="googlesitekit-publisher-win__inner-html"
              >
                I am string, not React elemet
              </span>
            </p>
          </div>
          <div
            class="googlesitekit-publisher-win__actions"
          >
            <span
              class="spinner"
              style="display: none; float: none; margin-top: 0px; visibility: visible;"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;
